fix overflow header

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,4 +13,6 @@ html {
 body {
 	background-color: '#fff';
 	overflow-x: hidden;
+	overflow-y: visible !important;
+	padding-right: 0 !important;
 }
